--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
     }
     .container {
         width: 100%;
@@ -27,6 +26,7 @@
         border-radius: 8px; /* Rounded corners for a modern look */
         text-align: center; /* Center align text */
         flex-grow: 1; /* Make the container grow to fill the available space */
+        padding-top: 80px; /* Ensure space for the fixed nav bar */
     }
     header, footer {
         background-color: #c0c0c0; /* Chic silver background */
@@ -118,6 +118,7 @@
         .container {
             width: 100%;
             padding: 10px;
+            padding-top: 100px; /* Ensure space for the fixed nav bar */
         }
         button, .home-button {
             padding: 8px 10px;
