--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #003366; /* Dark blue background */
+        background-color: #ffffff; /* White background */
         color: #333; /* Dark text for readability */
         height: 100vh; /* Full height */
         display: flex;
@@ -29,7 +29,7 @@
         padding-top: 80px; /* Ensure space for the fixed nav bar */
     }
     header, footer {
-        background-color: #c0c0c0; /* Chic silver background */
+        background-color: #ffffff; /* White background */
         color: #003366; /* Dark blue text */
         text-align: center;
         padding: 20px 0; /* Adjusted padding */
@@ -265,3 +265,4 @@
 </script>
 </body>
 </html>
+
