--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     }
     .header-title {
         color: #003366; /* Dark blue text */
+        font-size: 24px; /* Adjust the font size as needed */
     }
     .wellspan-logo {
         font-family: 'Times New Roman', Times, serif; /* Similar serif font */
