--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 </header>
 <div class="container">
     <div id="main-buttons" class="section-buttons">
-        <button onclick="showSection('clinical-guidelines')">Clinical Guidelines</button>
-        <button onclick="showSection('operational-guidelines')">Operational Guidelines</button>
-        <button onclick="showSection('handbook')">Handbook</button>
+        <button onclick="showSection('clinical-guidelines'); vibrate();">Clinical Guidelines</button>
+        <button onclick="showSection('operational-guidelines'); vibrate();">Operational Guidelines</button>
+        <button onclick="showSection('handbook'); vibrate();">Handbook</button>
     </div>
     <div id="clinical-guidelines" class="section">
         <button class="home-button" onclick="showSection('main-buttons'); vibrate();">Home</button>
